<resources>
    <string name="app_name">FeedIN</string>
    <string name="slide">SLIDE</string>
    <string name="feedin_image">FeedIN Image</string>


    <!--    Bottom Navbar Menu-->
    <string name="dashboard">Dashboard</string>
    <string name="history">History</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="request">Requests</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>